k8s/disease-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: disease-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      component: disease

  template:
    metadata:
      labels:
        component: disease
    spec:
      containers:
        - name: disease-app
          image: aakashveera/disease-predictor
          ports:
            - containerPort: 5000
