k8s/disease-cluster-ip-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: disease-cluster-ip-service

spec:
  type: ClusterIP
  selector:
    component: disease
  ports:
    - port: 5000
      targetPort: 5000
